# Ucheba123

./: README.md
geometryproject/: CMakeLists.txt  EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.h  GeneralTriangle.cpp  GeneralTriangle.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Quadrilateral.cpp  Quadrilateral.h  Rectangle.cpp  Rectangle.h  RightTriangle.cpp  RightTriangle.h  ShapeException.cpp  ShapeException.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp  text.txt
